
EXTRA_DIST = AUTHORS COPYING ChangeLog INSTALL NEWS README Makefile.mak

SUBDIRS = lib bin

include_HEADERS = include/HTS_engine.h

DISTCLEANFILES = *.log *.out *~ config/*~ include/*~

MAINTAINERCLEANFILES = aclocal.m4 configure Makefile.in        \
                       config/config.guess config/config.sub   \
                       config/depcomp config/install-sh        \
                       config/missing config/compile           \
                       config/ltmain.sh
